--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,8 @@ owner: arianpasquali # Your GitHub organization or username, where this reposito
 repo: upptime-monitor-example # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: cl2-nlp-api (Epic)
+    url: $EPIC_URL/v2/health
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
