--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: upptime-monitor-example # The name of this repository
 
 sites:
   - name: cl2-nlp-api (Epic)
-    url: ${EPIC_URL}/v2/health
+    url: $EPIC_URL
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -23,4 +23,4 @@ status-website:
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
-# test update
+
