--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -16,6 +16,13 @@ sites:
     headers:
       - "Content-Type: application/json"
     body: '{ "max_number_of_suggestions":5, "locale":"en", "texts":[ "google is acquiring data science community kaggle. Sources tell us that google is acquiring kaggle, a platform that hosts data science and machine learning competitions. Details about the transaction remain somewhat vague , but given that google is hosting its Cloud Next conference in san francisco this week, the official announcement could come as early as tomorrow." ] }'  
+
+  - name: cl2-nlp (Epic) [endpoint:zeroshot classification]
+    url: $EPIC_URL/v2/zeroshot_classification
+    method: POST
+    headers:
+      - "Content-Type: application/json"
+    body: '{ "tenant_id":"abc", "locale":"nl", "min_confidence_treshold": 0.7, "candidate_labels": [ {"label_id": "1", "text": "acquisitie"}, {"label_id": "2", "text": "finance"}, {"label_id": "3", "text": "turism"} ], "documents": [ {"doc_id": "xx", "text": "nieuw bericht over economie"}, {"doc_id": "a", "text": "google koopt datawetenschaps-community-kaggle."}, {"doc_id": "b", "text": "Dit bericht gaat over niets."} ] }'
   
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
